--- a/source/app/components/wi-workflow-designer/wi-flow-designer.less
+++ b/source/app/components/wi-workflow-designer/wi-flow-designer.less
@@ -5,6 +5,17 @@ wi-flow-designer {
     line-height: 35px;
     text-align: center;
     width: calc(~'100% - 125px');
+    input {
+      width: 100%;
+      background: none;
+      border: none;
+      text-align: center;
+      font-size: 18px;
+      font-weight: 500;
+      &:focus {
+        background-color: white;
+      }
+    }
   }
   .content {
     position: relative;
