--- a/source/app/components/wi-marker-manager/wi-marker-manager.html
+++ b/source/app/components/wi-marker-manager/wi-marker-manager.html
@@ -81,7 +81,7 @@
                     </td>
                     <td>
                         <svg height="28" width="100%" style="padding: 0 12px">
-                            <line x1="0" y1="14" x2="100%" y2="14" stroke-width="{{marker.markerTemplate.lineWidth}}" stroke-dasharray="{{marker.markerTemplate.lineStyle.join(',')}}" stroke="{{marker.markerTemplate.color}}"></line>
+                            <line x1="0" y1="14" x2="100%" y2="14" stroke-width="{{marker.markerTemplate.lineWidth}}" stroke-dasharray="{{marker.markerTemplate.lineStyle.dashArray.join(',')}}" stroke="{{marker.markerTemplate.color}}"></line>
                         </svg>
                     </td>
                     <td>{{marker.markerTemplate.description}}</td>
