--- a/source/app/components/wi-marker-manager/wi-marker-template-manager.html
+++ b/source/app/components/wi-marker-manager/wi-marker-template-manager.html
@@ -88,12 +88,12 @@
                             search-enabled="false">
                             <ui-select-match>
                                 <svg height="20" width="100%" style="padding: 0 12px">
-                                    <line x1="0" y1="10" x2="100%" y2="10" stroke-dasharray="{{$select.selected.join(',')}}" stroke="{{markerTemplate.color}}" stroke-width="{{markerTemplate.lineWidth}}"></line>
+                                    <line x1="0" y1="10" x2="100%" y2="10" stroke-dasharray="{{$select.selected.dashArray.join(',')}}" stroke="{{markerTemplate.color}}" stroke-width="{{markerTemplate.lineWidth}}"></line>
                                 </svg>
                             </ui-select-match>
-                            <ui-select-choices repeat="style in $ctrl.lineStyles">
+                            <ui-select-choices repeat="lineStyle in $ctrl.lineStyles">
                                 <svg height="20" width="100%">
-                                    <line x1="0" y1="10" x2="100%" y2="10" stroke-dasharray="{{style.join(',')}}" ng-style="{stroke: markerTemplate.color, 'stroke-width': markerTemplate.lineWidth}"></line>
+                                    <line x1="0" y1="10" x2="100%" y2="10" stroke-dasharray="{{lineStyle.dashArray.join(',')}}" ng-style="{stroke: markerTemplate.color, 'stroke-width': markerTemplate.lineWidth}"></line>
                                 </svg>
                             </ui-select-choices>
                         </ui-select>
