--- a/source/app/components/wi-marker-manager/wi-marker-template-manager.html
+++ b/source/app/components/wi-marker-manager/wi-marker-template-manager.html
@@ -87,13 +87,18 @@
                         <ui-select theme="bootstrap" ng-model="markerTemplate.lineStyle" ng-change="$ctrl.markerTemplateEdited(markerTemplate);"
                             search-enabled="false">
                             <ui-select-match>
-                                <svg height="20" width="100%" style="padding: 0 12px">
-                                    <line x1="0" y1="10" x2="100%" y2="10" stroke-dasharray="{{$select.selected.dashArray.join(',')}}" stroke="{{markerTemplate.color}}" stroke-width="{{markerTemplate.lineWidth}}"></line>
+                                <svg ng-if="markerTemplate.lineStyle.shape === 'line'" height="16" width="100%" style="margin: 2px;">
+                                    <line x1="0" y1="8" x2="100%" y2="8" stroke-width="{{markerTemplate.lineWidth}}" stroke-dasharray="{{markerTemplate.lineStyle.dashArray.join(',')}}"
+                                        stroke="{{markerTemplate.color}}"></line>
+                                </svg>
+                                <svg ng-if="markerTemplate.lineStyle.shape !== 'line'" height="16" width="100%" style="margin: 2px;" ng-bind-html="$ctrl.getLineHtml({color: markerTemplate.color, lineWidth: markerTemplate.lineWidth, lineStyle: markerTemplate.lineStyle})">
                                 </svg>
                             </ui-select-match>
                             <ui-select-choices repeat="lineStyle in $ctrl.lineStyles">
-                                <svg height="20" width="100%">
+                                <svg ng-if="lineStyle.shape === 'line'" height="16" width="100%" style="margin: 2px;">
                                     <line x1="0" y1="10" x2="100%" y2="10" stroke-dasharray="{{lineStyle.dashArray.join(',')}}" ng-style="{stroke: markerTemplate.color, 'stroke-width': markerTemplate.lineWidth}"></line>
+                                </svg>
+                                <svg ng-if="lineStyle.shape !== 'line'" height="16" width="100%" style="margin: 2px;" ng-bind-html="$ctrl.getLineHtml({color: markerTemplate.color, lineWidth: markerTemplate.lineWidth, lineStyle})">
                                 </svg>
                             </ui-select-choices>
                         </ui-select>
