--- a/source/app/components/wi-marker-manager/wi-marker-template-manager.html
+++ b/source/app/components/wi-marker-manager/wi-marker-template-manager.html
@@ -94,7 +94,7 @@
                                 <svg ng-if="markerTemplate.lineStyle.shape !== 'line'" height="16" width="100%" style="margin: 2px;" ng-bind-html="$ctrl.getLineHtml({color: markerTemplate.color, lineWidth: markerTemplate.lineWidth, lineStyle: markerTemplate.lineStyle})">
                                 </svg>
                             </ui-select-match>
-                            <ui-select-choices repeat="lineStyle in $ctrl.lineStyles">
+                            <ui-select-choices repeat="lineStyle in $ctrl.lineStyles track by $index">
                                 <svg ng-if="lineStyle.shape === 'line'" height="16" width="100%" style="margin: 2px;">
                                     <line x1="0" y1="10" x2="100%" y2="10" stroke-dasharray="{{lineStyle.dashArray.join(',')}}" ng-style="{stroke: markerTemplate.color, 'stroke-width': markerTemplate.lineWidth}"></line>
                                 </svg>
